--- a/style.css
+++ b/style.css
@@ -1,6 +1,22 @@
 :root {
-    --backgroundColor : black;
-    --white:white;
+    --backgroundColor : rgb(0, 0, 0);
+    --white:rgb(255, 255, 255);
+    
+}
+
+button {
+    padding: 15px;
+    border-radius: 40px;
+    min-width: 150px;
+    background-color: rgb(225, 168, 93);
+    font-weight: 900;
+    outline: none;
+
+}
+
+button:hover {
+    background-color: rgb(245, 207, 113);
+    cursor: pointer;
 }
 
 
@@ -9,11 +25,10 @@
     padding: 0%;
     box-sizing: border-box;
 }
-
 body {
     display: flex;
     flex-direction: column;
-    height: 200vh;
+    height: 400vh;
 }
 
 header {
@@ -31,6 +46,19 @@ header {
     height: 100%;
  }
 
+ .headerBtn {
+    padding: 10px;
+    border-radius: 40px;
+    min-width: 50px;
+    background-color: rgb(8, 100, 128);
+    font-weight: 900;
+    color: rgb(255, 255, 255);
+ }
+ .headerBtn:hover {
+    background-color: rgb(5, 134, 128);
+    cursor: pointer;
+ }
+
 .mainInfo {
     display: flex;
     flex-direction: column;
@@ -42,19 +70,17 @@ header {
     align-items: center;
     justify-content: center;
     flex: 1;
-    background-blend-mode: hue ;
-    background-image: url(https://tse3.mm.bing.net/th?id=OIP.WeUW1LDCCgRwV-ZbDI-cCgHaEK&pid=Api&P=0&h=220);
+    background-image: url(https://gratisography.com/wp-content/uploads/2021/01/gratisogarphy-distressed-brick-free-stock-photo-1168x780.jpg);
     background-size: cover; /* Adjust as needed */
     background-position: center; /* Adjust as needed */
     background-repeat: no-repeat; /* Adjust as needed */
-    background-color: rgba(0, 0, 0, 0.3); /* Adjust the opacity (last value) as needed */
-
 }
+
 .titleBox {
-    background-color: var(--backgroundColor);
+    background-color: rgba(5, 5, 5, 0.582);
     color: var(--white);
-    height: 80%;
-    width: 60%;
+    height: 100%;
+    width: 100%;
    text-align: center;
   
 }
@@ -66,8 +92,52 @@ header {
 .sectionTwo {
     display: flex;
     flex: 1;
-    background-color: var(--white);
+    flex-direction: column; 
+    background-image: url(https://wallpapercave.com/wp/wp2465616.jpg);
+    background-size: cover; /* Adjust as needed */
+    background-position: center; /* Adjust as needed */
+    background-repeat: no-repeat; /* Adjust as needed */
 }
+
+.sectionTwoBoxOne {
+    flex: 1 1 100Px;
+    display: flex;
+    flex-direction: column;
+}
+
+.ImageContainer {
+    width: 90%;
+    height: 50%;
+  align-self: center;
+
+}
+.ImageContainer img {
+    width: 100%;
+    height: 100%;
+ 
+}
+
+.SectionTwoBoxTwo {
+    flex: 1 1 100Px;
+    display: flex;
+    flex-direction: column;
+   
+}
+.ImageContainerTWO {
+    width: 90%;
+    height: 50%;
+    display: flex;
+    align-self: center;
+
+ 
+}
+
+.ImageContainerTWO img {
+    width: 100%;
+    height: 100%;
+   
+}
+
 
 
 .sectionThree {
@@ -80,7 +150,7 @@ header {
     display: flex;
     flex: 1;
     background-color: var(--white);
-}
+}  
 
 .sectionFive {
     display: flex;
@@ -92,5 +162,16 @@ footer {
 min-height: 120px;
 background-color: aqua;
 display: flex;
-justify-content: space-evenly;
+flex-direction: column;
+
+}
+.footerSectionTwo {
+    display: flex;
+   justify-content: space-evenly;
+
+}
+
+.logos {
+  display: flex;
+justify-content: center;
 }
